fix(website): remove gap in badge css (#991)

--- a/website/app/components/preview/CDN.module.css
+++ b/website/app/components/preview/CDN.module.css
@@ -1,6 +1,5 @@
 .badge {
 	padding: rem(4px) rem(8px);
-	gap: rem(10px);
 
 	border-radius: rem(4px);
 	font-family: var(--mantine-font-family-monospace);
